# pretalxCalendarExporter

./: .config.yml.example  .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  favourites.ics  index.html  pyproject.toml  requirements.txt
.github/workflows/: export-calendar.yml
src/pretalx_star_exporter/: __init__.py  __main__.py  exporter.py
tests/: test_api_schedule_filters.py  test_env_config.py  test_export_smoke.py  test_ics_generation.py  test_login_flow.py
