[project]
name = "pretalx-starred-exporter"
version = "0.1.0"
description = "Export a logged-in pretalx user's starred sessions to an ICS file"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.0",
  "PyYAML>=6.0.2",
  "icalendar>=6.1.1",
]

[project.scripts]
pretalx-starred-export = "pretalx_star_exporter.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pretalx_star_exporter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
